feat: implement story 2.0
